// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio component renders a disabled radio button 1`] = `
.sxd5tx1 {
  align-items: center;
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid var(--sx-colors-tonal600);
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 0;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  transition: all 50ms ease-out;
}

.sxd5tx1:hover {
  outline: none;
}

.sxd5tx1:focus {
  outline: none;
}

:checked + .sxd5tx1 {
  background-color: var(--sx-colors-primary);
  border-color: var(--sx-colors-primary);
}

[disabled] + .sxd5tx1 {
  background-color: var(--sx-colors-tonal600);
  border: 2px solid var(--sx-colors-tonal600);
}

.sxekp6i {
  height: 6px;
  width: 6px;
  border-radius: var(--sx-radii-round);
  background-color: white;
}

<div>
  <div
    class="sx03kze"
    role="radiogroup"
  >
    <input
      disabled=""
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="disabled indicator"
      class="sxd5tx1"
      data-disabled=""
      data-state="unchecked"
      disabled=""
      role="radio"
      tabindex="-1"
      type="button"
      value="value"
    />
  </div>
</div>
`;

exports[`Radio component renders a radio button 1`] = `
.sxd5tx1 {
  align-items: center;
  -webkit-appearance: none;
  appearance: none;
  background-color: transparent;
  border: 1px solid var(--sx-colors-tonal600);
  border-radius: var(--sx-radii-round);
  cursor: pointer;
  display: flex;
  justify-content: center;
  padding: 0;
  height: var(--sx-sizes-1);
  width: var(--sx-sizes-1);
  transition: all 50ms ease-out;
}

.sxd5tx1:hover {
  outline: none;
}

.sxd5tx1:focus {
  outline: none;
}

:checked + .sxd5tx1 {
  background-color: var(--sx-colors-primary);
  border-color: var(--sx-colors-primary);
}

[disabled] + .sxd5tx1 {
  background-color: var(--sx-colors-tonal600);
  border: 2px solid var(--sx-colors-tonal600);
}

.sxekp6i {
  height: 6px;
  width: 6px;
  border-radius: var(--sx-radii-round);
  background-color: white;
}

<div>
  <div
    class="sx03kze"
    role="radiogroup"
  >
    <input
      hidden=""
      type="radio"
      value="value"
    />
    <button
      aria-checked="false"
      aria-label="indicator"
      class="sxd5tx1"
      data-radix-roving-focus-group-id="radix-id-0-1"
      data-state="unchecked"
      role="radio"
      tabindex="0"
      type="button"
      value="value"
    />
  </div>
</div>
`;
